selene-lib/tests/full_run/std_mistakes/roblox_mistakes.lua
local color = Color3.fromHex("FFFFFF")
debug.profilebegin("roblox only")
